# skita

./: .gitignore  CLAUDE.md  README.md  app.py  main.py  pyproject.toml  uv.toml
.claude/: settings.json  settings.local.json
.claude/meta/: ice_result.json
.claude/skills/crispr-mutation/: SKILL.md  requirements.txt
.claude/skills/crispr-mutation/meta/: crispr_mutation_run.json  crispr_mutation_sample.json
.claude/skills/crispr-mutation/scripts/: batch_run.py  collect_results.py  mutation_define_NGS.py  save_results.py
.claude/skills/crispr-mutation/tests/: test_pipeline.py
.claude/skills/crispresso/: SKILL.md
.claude/skills/crispresso/scripts/: batch_run.py  collect_results.py  save_results.py
.claude/skills/crispresso/tests/: test_pipeline.py
.claude/skills/data-preprocess/: SKILL.md  requirements.txt
.claude/skills/data-preprocess/scripts/: extract_sangon_order_xlsx.py
.claude/skills/data-preprocess/tests/: test_extract_sangon.py
.claude/skills/email-sender/: SKILL.md  requirements.txt
.claude/skills/email-sender/scripts/: email_client.py
.claude/skills/ice-analysis/: SKILL.md  requirements.txt
.claude/skills/web-dashboard/: SKILL.md  requirements.txt
data/exports/: ice_test.all.json  ice_test.all.txt  ice_test.contribs.json  ice_test.contribs.txt  ice_test.indel.json  ice_test.windowed.json  ice_test.windowed.txt
meta/: crispresso_run.json  crispresso_sample.json  email_send_log.json  ice_run.json  sangon_primer_order.json
scripts/: central.py  db.py  files.py
scripts/tests/: test_db.py  test_files.py
(+13 files in other folders)
